Cleaned up some of the more obvious lint warnings.